# Afrivel

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
crates/afrivel/: Cargo.toml
crates/afrivel-cli/: Cargo.toml
crates/afrivel-cli-rt/: Cargo.toml
crates/afrivel-cli-rt/src/: lib.rs
crates/afrivel-cli/src/: cli.rs  cmd_dev.rs  cmd_make.rs  cmd_new.rs  cmd_runtime.rs  context.rs  main.rs  manifest.rs  templates.rs  ui.rs  writer.rs
crates/afrivel-cli/tests/: e2e_build.rs
crates/afrivel-codegen/: Cargo.toml
crates/afrivel-codegen/src/: error.rs  lib.rs  model.rs  naming.rs  types.rs
crates/afrivel-core/: Cargo.toml
crates/afrivel-core/src/: app.rs  config.rs  error.rs  lib.rs  logging.rs  validation.rs
crates/afrivel-core/src/auth/: hashing.rs  jwt.rs  mod.rs
crates/afrivel-core/tests/: app.rs
crates/afrivel-macros/: Cargo.toml
crates/afrivel-macros/src/: lib.rs
crates/afrivel-orm/: Cargo.toml
crates/afrivel-orm/src/: error.rs  factory.rs  lib.rs  migrator.rs  model.rs  repository.rs  seeder.rs
crates/afrivel-orm/tests/: postgres.rs
crates/afrivel/src/: lib.rs
crates/afrivel/tests/: model_derive.rs
docs/: ARCHITECTURE.md  CLI.md  DECISIONS.md  DESIGN.md  IMPLEMENTATION.md  QUICKSTART.md  README.md  ROADMAP.md
docs/modules/: auth.md
examples/demo/: Cargo.toml
examples/demo/src/: lib.rs  main.rs  migrator.rs  registry.rs
examples/demo/src/auth/: contracts.rs  guards.rs  migration.rs  mod.rs
examples/demo/src/auth/domain/: entities.rs  mod.rs  service.rs
examples/demo/src/auth/http/: controllers.rs  mod.rs  requests.rs  resources.rs  routes.rs
examples/demo/src/auth/infra/: memory.rs  mod.rs  seaorm.rs
examples/demo/tests/: auth_flow.rs  postgres_smoke.rs
templates/: .gitkeep
templates/module/: Cargo.toml.jinja  controller.rs.jinja  lib.rs.jinja  migration.rs.jinja  model.rs.jinja  repository.rs.jinja  routes.rs.jinja
templates/project/: Afrivel.toml.jinja  Cargo.toml.jinja  gitignore.jinja
templates/project/app/: Cargo.toml.jinja  main.rs.jinja  migrator.rs.jinja  registry.rs.jinja
templates/project/config/: default.toml.jinja
