[package]
name = "afrivel-cli"
description = "Afrivel — binaire CLI `afrivel` : new, make:*, dev, et délégation des commandes runtime."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "afrivel"
path = "src/main.rs"

[dependencies]
afrivel-codegen = { workspace = true }
afrivel-cli-rt = { workspace = true }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
minijinja = "2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
notify = "6"

[dev-dependencies]
tempfile = "3"
