[package]
name = "afrivel-core"
description = "Afrivel — noyau : routing, erreurs (IntoResponse), config, logging, validation, DI."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
