[package]
name = "afrivel-macros"
description = "Afrivel — macros dérivées (#[derive(Model)], Request, Resource)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[dependencies]
