[package]
name = "afrivel-orm"
description = "Afrivel — ORM ergonomique au-dessus de SeaORM : relations, factories, seeders, migrator."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
afrivel-core = { workspace = true }
sea-orm = { version = "1.1", default-features = false, features = [
    "macros",
    "with-uuid",
    "with-chrono",
    "with-rust_decimal",
    "with-json",
    "sqlx-postgres",
    "runtime-tokio-rustls",
] }
sea-orm-migration = { version = "1.1", default-features = false, features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
] }
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
