[package]
name = "afrivel"
description = "Afrivel — façade du framework : re-export de core/orm/macros (dépendance des applications)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
afrivel-core = { workspace = true }
afrivel-orm = { workspace = true }
afrivel-macros = { workspace = true }

[dev-dependencies]
sea-orm = { version = "1.1", default-features = false, features = ["macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
